--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <span class="search-form__label-text visually-hidden">Город</span>
               <input
                 type="text"
-                placeholder="Санкт Петербург, например"
+                placeholder="Санкт-Петербург, например"
                 name="city"
                 class="search-form__textfield"
               />
@@ -37,7 +37,7 @@
                   type="checkbox"
                   name="time"
                   value="morning"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Утро</span>
@@ -47,7 +47,7 @@
                   type="checkbox"
                   name="time"
                   value="afternoon"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">День</span>
@@ -57,11 +57,11 @@
                   type="checkbox"
                   name="time"
                   value="night"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Ночь</span>
-              </label>
+              </label>		  
             </div>
           </fieldset>
           <button type="submit" class="button search-form__submit-button">
@@ -75,40 +75,40 @@
         </h1>
         <ul class="content__list">
           <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
+          <template class="preloader-template">
+            <div class="preloader">
+              <div class="preloader-chasing-squares">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+              </div>
+            </div>
+          </template>
+      
+          <template class="cards-list-item-template">
+            <li class="content__list-item">
+              <a href="#0" class="content__card-link" tabindex="0">
+                <article class="content__video-card">
+                  <div class="content__video-card-description-container">
+                    <h2 class="content__video-card-title"></h2>
+                    <p class="content__video-card-description"></p>
+                  </div>
+                  <img src="" alt="" class="content__video-card-thumbnail" />
+                </article>
+              </a>
+            </li>
+          </template>
         </ul>
+        <template class="more-button-template">
+          <li><button class="button more-button">Показать еще</button></li>
+        </template>
       </section>
     </main>
 
     <!-- ТЕМПЛЕЙТЫ -->
 
-    <template class="preloader-template">
-      <div class="preloader">
-        <div class="preloader-chasing-squares">
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-          <div class="square"></div>
-        </div>
-      </div>
-    </template>
-
-    <template class="cards-list-item-template">
-      <li class="content__list-item">
-        <a href="#0" class="content__card-link">
-          <article class="content__video-card">
-            <div class="content__video-card-description-container">
-              <h2 class="content__video-card-title"></h2>
-              <p class="content__video-card-description"></p>
-            </div>
-            <img src="" alt="" class="content__video-card-thumbnail" />
-          </article>
-        </a>
-      </li>
-    </template>
-    <template class="more-button-template">
-      <li><button class="button more-button">Показать еще</button></li>
-    </template>
-
+   
     <template class="error-template">
       <div class="error">
         <h2 class="error__title"></h2>
